--- a/FE/flower_store/package.json
+++ b/FE/flower_store/package.json
@@ -14,9 +14,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
-    "react-facebook-login": "^4.1.1",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-social-login": "^3.4.17",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
