--- a/FE/flower_store/package.json
+++ b/FE/flower_store/package.json
@@ -14,10 +14,13 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.0.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-social-login": "^3.4.17",
     "react-toastify": "^9.1.3",
+    "redux": "^5.0.0",
+    "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
