--- a/FE/flower_store/package.json
+++ b/FE/flower_store/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "creditcardpayments": "^1.0.3",
     "firebase": "^10.5.2",
     "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-lazy-load": "^4.0.1",
     "react-redux": "^9.0.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
