--- a/BE/flower_store/src/main/resources/application.properties
+++ b/BE/flower_store/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.jpa.show-sql=true
 server.port=8080
 
 jwt.secret=nuocmatemlaubangtinhiumoi
+
+spring.social.facebook.app-id=${IDFB}
+spring.social.facebook.app-secret=${SECRET}
