--- a/FE/flower_store/package.json
+++ b/FE/flower_store/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.1.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
-    "creditcardpayments": "^1.0.3",
     "firebase": "^10.5.2",
     "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
@@ -16,13 +16,16 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-lazy-load": "^4.0.1",
+    "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^9.0.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-social-login": "^3.4.17",
     "react-toastify": "^9.1.3",
+    "reactjs-social-login": "^2.6.3",
     "redux": "^5.0.0",
     "redux-thunk": "^3.1.0",
+    "sweetalert2": "^11.10.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
